--- a/app/platforms/ios/Dezling/Resources/Dezling.entitlements
+++ b/app/platforms/ios/Dezling/Resources/Dezling.entitlements
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-  <dict>
-    <key>com.apple.developer.associated-domains</key>
-    <array>
-      <string>applinks:a9w6b.app.goo.gl</string>
-      <string>applinks:ezling-405c6.firebaseapp.com</string>
-    </array>
-  </dict>
+<dict>
+	<key>aps-environment</key>
+	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:a9w6b.app.goo.gl</string>
+		<string>applinks:dezling-405c6.firebaseapp.com</string>
+	</array>
+</dict>
 </plist>
